# codechunk

./: .env.sample  .gitignore  main.py  pyproject.toml
codechunk/: __main__.py  chunker.py  codechunk.py  core.py  indexer.py  logging.py  ui.py  utils.py
fixtures/: lorem.txt
tests/: test_chunk.py
