[project]
name = "codechunk"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.15",
    "openai==1.99.6",
    "pydantic==2.11.7",
    "textual==5.3.0",
    "typer>=0.16.0",
]

[project.scripts]
codechunk = "codechunk.codechunk:app"

[tool.setuptools.packages.find]
where = ["."]           # Look for packages in the current directory (project root)
include = ["codechunk*"]   # Explicitly include your main package 'docgen'
